--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,25 +8,43 @@
     <title>Colors</title>
     <link rel="stylesheet" href="./dist/css/style.css">
   </head>
-    <!-- Color changing dynamically by SCSS-->
+  <!-- Implementing dynamic styling via SCSS variables and mixins-->
+  <!-- 
+        .fill-yellow-1 {
+            /* SVG interior */
+            fill: $color
+        }
+        .stroke-yellow-1  {
+            /* SVG outline */
+            stroke: $color;
+        }
+        .color-yellow-1  {
+            /* Text color */
+            color: $color;
+        }
+        .bg-yellow-1  {
+            //background
+            background-color: $color;
+        }
+  -->
   <body>
-    <main>
-        <h1>Colors</h1> 
-        <div class="colors-container yellow">
-            <div class="bg-1"> </div> 
-            <div class="bg-2"> </div>
-            <div class="bg-3"> </div>
-            <div class="bg-4"> </div>
-            <div class="bg-5"> </div>
-        </div>
-        <div class="select-container">
-            <button class="bg-yellow-3">Yellow</button>
-            <button class="bg-orange-3">Orange</button>
-            <button class="bg-red-3">Red</button>
-            <button class="bg-violet-3">Violet</button>
-            <button class="bg-blue-3">Blue</button>
-            <button class="bg-green-3">Green</button>
-        </div>
+    <main class="yellow">
+      <div class="colors-container">
+        <div class="balloon bg-1" style="--bottom: 0"> </div>
+        <div class="balloon bg-2" style="--bottom: 1"> </div>
+        <div class="balloon bg-3" style="--bottom: 2"> </div>
+        <div class="balloon bg-4" style="--bottom: 3"> </div>
+        <div class="balloon bg-5" style="--bottom: 4"> </div>
+      </div>
+      <div class="select-container">
+        <button class="bg-yellow-3" >Yellow</button>
+        <button class="bg-orange-3">Orange</button>
+        <button class="bg-red-3">Red</button>
+        <button class="bg-violet-3">Violet</button>
+        <button class="bg-blue-3">Blue</button>
+        <button class="bg-green-3">Green</button>
+      </div>
     </main>
   </body>
+
 </html>
